--- a/SwipeAndSaveFlickrImage/View/FlickrPhotoCollectionViewCell.xib
+++ b/SwipeAndSaveFlickrImage/View/FlickrPhotoCollectionViewCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="4dw-33-5Lg">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="4dw-33-5Lg">
                         <rect key="frame" x="0.0" y="1" width="100" height="98"/>
                         <color key="tintColor" name="BackgroundImageColor"/>
                         <constraints>
