--- a/SwipeAndSaveFlickrImage/View/SwipePhotoCardView/SwipePhotoCardView.xib
+++ b/SwipeAndSaveFlickrImage/View/SwipePhotoCardView/SwipePhotoCardView.xib
@@ -9,26 +9,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SwipePhotoCardView" customModule="SwipeAndSaveFlickrImage" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+        <view contentMode="scaleToFill" id="5af-3M-Eb5" customClass="SwipePhotoCardView" customModule="SwipeAndSaveFlickrImage" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="800"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U3d-s9-rpA">
-                    <rect key="frame" x="0.0" y="46" width="414" height="818"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rnJ-mX-Bvr">
+                    <rect key="frame" x="0.0" y="44" width="414" height="756"/>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="U3d-s9-rpA" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="UNE-40-qZY"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="U3d-s9-rpA" secondAttribute="bottom" id="YqA-mB-wLq"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="U3d-s9-rpA" secondAttribute="trailing" id="dhr-XW-Hfk"/>
-                <constraint firstItem="U3d-s9-rpA" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="uhf-93-fvb"/>
+                <constraint firstItem="rnJ-mX-Bvr" firstAttribute="leading" secondItem="46f-eT-yk6" secondAttribute="leading" id="8x7-GT-jAv"/>
+                <constraint firstItem="46f-eT-yk6" firstAttribute="bottom" secondItem="rnJ-mX-Bvr" secondAttribute="bottom" id="S2G-JH-r3k"/>
+                <constraint firstItem="46f-eT-yk6" firstAttribute="trailing" secondItem="rnJ-mX-Bvr" secondAttribute="trailing" id="qyA-0I-cI2"/>
+                <constraint firstItem="rnJ-mX-Bvr" firstAttribute="top" secondItem="46f-eT-yk6" secondAttribute="top" id="yAD-qB-76N"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <viewLayoutGuide key="safeArea" id="46f-eT-yk6"/>
             <connections>
-                <outlet property="photoImageView" destination="U3d-s9-rpA" id="sEi-Su-HQb"/>
+                <outlet property="photoImageView" destination="rnJ-mX-Bvr" id="iUY-BL-yn5"/>
             </connections>
-            <point key="canvasLocation" x="139" y="94"/>
+            <point key="canvasLocation" x="-664" y="94"/>
         </view>
     </objects>
 </document>
